--- a/card.html
+++ b/card.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>Learning purpose of git and github, i am creating this html file </h1>
 
+	<h2>This is my first changes to html file</h2>
+
 </body>
 </html>
